[package]
name = "bert_tokenizer"
version = "0.1.1"
edition = "2021"
authors = ["Yiğit Bekir Kaya <kayayig@itu.edu.tr>"]
description = "This crate is a Rust port of Google's BERT WordPiece tokenizer."
license-file = "LICENSE"
license = "MIT"
repository = "https://github.com/yigit353/bert_tokenizer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
indexmap = "1.9.2"
rayon = "1.6.1"
unicode-normalization = "0.1.22"
unicode_categories = "0.1.1"

